# dmdqn

./: .gitignore  README.md  log_config.py  main.py  pyproject.toml
agents/: dqn_agent.py  sum_env.py
config/: agent_config.yaml  env_config.yaml
docs/: environment.md  improvements.md  problem.md  usage.md
src/agents/: dqn_agent.py  multi_agent_interaction.py  sum_env.py  sumo_env.py
src/experimental/: agent.py  order_lanes.py  test_network.py
src/scripts/: assign_vehicle_to_trip.py  baseline.py  test.py  train.py  train_gnn.py
src/sumo_files/scenarios/: grid_3x3.add.xml  grid_3x3.net.xml  grid_3x3.sumocfg  grid_3x3_05p.sumocfg  grid_3x3_p05.rou.alt.xml  grid_3x3_p05.rou.xml  grid_3x3_p06.rou.xml
src/sumo_files/scenarios/grid_3x3/: grid_3x3_p06.rou.alt.xml  trips_p06.trips.xml
src/sumo_files/scenarios/grid_3x3_lefthand/: e2_0.xml  e2_1.xml  e2_10.xml  e2_100.xml  e2_101.xml  e2_102.xml  e2_103.xml  e2_104.xml  e2_11.xml  e2_12.xml  e2_13.xml  e2_14.xml  e2_15.xml  e2_16.xml  e2_17.xml  e2_18.xml  e2_19.xml  e2_2.xml  e2_20.xml  e2_21.xml  e2_22.xml  e2_23.xml  e2_24.xml  e2_25.xml  e2_26.xml  e2_27.xml  e2_28.xml  e2_29.xml  e2_3.xml  e2_30.xml  e2_31.xml  e2_32.xml  e2_33.xml  e2_34.xml  e2_35.xml  e2_36.xml  e2_37.xml  e2_38.xml  e2_39.xml  e2_4.xml  (+75 more)
src/sumo_files/scenarios/networks/: grid_3x3.net.xml
src/sumo_files/scenarios/routes/: grid_3x3_p05.rou.alt.xml  grid_3x3_p05.rou.xml
src/sumo_files/scenarios/test/: single_int.net.xml  single_int.netecfg  single_int.rou.xml  single_int.sumocfg  (+1 more)
src/sumo_files/trips/: test.trips.xml  trips_p05.trips.xml
