[project]
name = "dmdqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.9.2",
    "tensorboard>=2.19.0",
    "tensorflow[and-cuda]>=2.19.0",
    "torch>=2.0.1",
    "torch-geometric>=2.6.1",
    "traci>=1.22.0",
    "wandb>=0.19.9",
]
